--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,8 +1,6 @@
-@import './mixins';
-
 .site-header {
   position: fixed;
-  z-index: 1;
+  z-index: $z-header;
 
   top: 0;
   width: 100%;
